// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ECMAScript containers stepping Array#every 1`] = `
[
  [
    "every@0[9]:true/true",
    1,
  ],
  [
    "every@1[10]:true/true",
    2,
  ],
  [
    "> every:Array",
    [
      false,
      true,
    ],
  ],
  [
    "every@0[11]:true/true",
    1,
  ],
  [
    "every@1[12]:true/true",
    2,
  ],
  [
    "> every:TypedArray",
    [
      false,
      true,
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Array#filter 1`] = `
[
  [
    "filter@0[0]:true/true",
    1,
  ],
  [
    "filter@1[1]:true/true",
    2,
  ],
  [
    "filter@2[2]:true/true",
    3,
  ],
  [
    "> filter:Array",
    [
      1,
      3,
    ],
  ],
  [
    "filter@0[0]:true/true",
    1,
  ],
  [
    "filter@1[1]:true/true",
    2,
  ],
  [
    "filter@2[2]:true/true",
    3,
  ],
  [
    "> filter:TypedArray",
    [
      1,
      3,
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Array#forEach 1`] = `
[
  [
    "forEachTest@0[0]:true",
    1,
  ],
  [
    "forEachTest@1[1]:true",
    2,
  ],
  [
    "forEachTest@2[2]:true",
    3,
  ],
  [
    "> forEach:Array",
    undefined,
  ],
  [
    "forEachTest@0[0]:true",
    1,
  ],
  [
    "forEachTest@1[1]:true",
    2,
  ],
  [
    "forEachTest@2[2]:true",
    3,
  ],
  [
    "> forEach:TypedArray",
    undefined,
  ],
  [
    "forEachTest@1[0]:true",
    1,
  ],
  [
    "forEachTest@2[1]:true",
    2,
  ],
  [
    "forEachTest@3[2]:true",
    3,
  ],
  [
    "> forEach:Set",
    undefined,
  ],
  [
    "forEachTest@1[0]:true",
    "a",
  ],
  [
    "forEachTest@2[1]:true",
    "b",
  ],
  [
    "forEachTest@3[2]:true",
    "c",
  ],
  [
    "> forEach:Map",
    undefined,
  ],
]
`;

exports[`ECMAScript containers stepping Array#map 1`] = `
[
  [
    "map@0[0]:true/true",
    1,
  ],
  [
    "map@1[1]:true/true",
    2,
  ],
  [
    "map@2[2]:true/true",
    3,
  ],
  [
    "> map:Array",
    [
      1,
      3,
      5,
    ],
  ],
  [
    "map@0[0]:true/true",
    1,
  ],
  [
    "map@1[1]:true/true",
    2,
  ],
  [
    "map@2[2]:true/true",
    3,
  ],
  [
    "> map:TypedArray",
    [
      1,
      3,
      5,
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Array#reduce 1`] = `
[
  [
    "reduce:~@0[0]:true",
    "a",
  ],
  [
    "reduce:~/a@1[1]:true",
    "b",
  ],
  [
    "reduce:~/a/b@2[2]:true",
    "c",
  ],
  [
    "reduce:a@1[3]:true",
    "b",
  ],
  [
    "reduce:a/b@2[4]:true",
    "c",
  ],
  [
    "> reduce:Array",
    [
      "~/a/b/c",
      "a/b/c",
    ],
  ],
  [
    "reduce:~@0[0]:true",
    1,
  ],
  [
    "reduce:~/1@1[1]:true",
    2,
  ],
  [
    "reduce:~/1/2@2[2]:true",
    3,
  ],
  [
    "reduce:1@1[3]:true",
    2,
  ],
  [
    "reduce:1/2@2[4]:true",
    3,
  ],
  [
    "> reduce:TypedArray",
    [
      "~/1/2/3",
      "1/2/3",
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Array#reduceRight 1`] = `
[
  [
    "reduceRight:~@2[0]:true",
    "c",
  ],
  [
    "reduceRight:~/c@1[1]:true",
    "b",
  ],
  [
    "reduceRight:~/c/b@0[2]:true",
    "a",
  ],
  [
    "reduceRight:c@1[3]:true",
    "b",
  ],
  [
    "reduceRight:c/b@0[4]:true",
    "a",
  ],
  [
    "> reduceRight:Array",
    [
      "~/c/b/a",
      "c/b/a",
    ],
  ],
  [
    "reduceRight:~@2[0]:true",
    3,
  ],
  [
    "reduceRight:~/3@1[1]:true",
    2,
  ],
  [
    "reduceRight:~/3/2@0[2]:true",
    1,
  ],
  [
    "reduceRight:3@1[3]:true",
    2,
  ],
  [
    "reduceRight:3/2@0[4]:true",
    1,
  ],
  [
    "> reduceRight:TypedArray",
    [
      "~/3/2/1",
      "3/2/1",
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Array#some 1`] = `
[
  [
    "some@0[5]:true/true",
    1,
  ],
  [
    "some@1[6]:true/true",
    2,
  ],
  [
    "> some:Array",
    [
      true,
      false,
    ],
  ],
  [
    "some@0[7]:true/true",
    1,
  ],
  [
    "some@1[8]:true/true",
    2,
  ],
  [
    "> some:TypedArray",
    [
      true,
      false,
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Array#sort 1`] = `
[
  [
    "> sort:Array",
    [
      [
        1,
        2,
        3,
      ],
      [
        "a",
        "b",
        "c",
      ],
    ],
  ],
  [
    "> sort:TypedArray",
    [
      Int8Array [
        1,
        2,
        3,
      ],
      Int8Array [
        1,
        2,
        3,
      ],
    ],
  ],
]
`;

exports[`ECMAScript containers stepping Map#forEach 1`] = `
[
  [
    "forEachTest@1[0]:true",
    "a",
  ],
  [
    "forEachTest@2[1]:true",
    "b",
  ],
  [
    "forEachTest@3[2]:true",
    "c",
  ],
  [
    "> forEach:Map",
    undefined,
  ],
]
`;

exports[`ECMAScript containers stepping Set#forEach 1`] = `
[
  [
    "forEachTest@1[0]:true",
    1,
  ],
  [
    "forEachTest@2[1]:true",
    2,
  ],
  [
    "forEachTest@3[2]:true",
    3,
  ],
  [
    "> forEach:Set",
    undefined,
  ],
]
`;
